influx-depeloyment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "6"
  creationTimestamp: null
  generation: 1
  labels:
    name: influxdb
    version: v1
  name: influxdb-v1
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/influxdb-v1
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: influxdb
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: influxdb
        version: v1
    spec:
      containers:
      - env:
        - name: INFLUX_USERNAME
          value: USERNAME
        - name: INFLUX_PASSWORD
          value: PASSWORD
        - name: INFLUXDB_DB
          value: grafana
        image: image-link
        imagePullPolicy: IfNotPresent
        name: influxdb
        ports:
        - containerPort: 8083
          hostPort: 8081
          protocol: TCP
        - containerPort: 8086
          hostPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/influxdb
          name: influxdb-persistent-storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      volumes:
      - emptyDir: {}
        name: influxdb-persistent-storage
status: {}
