influx-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    name: influxdb
  name: monitoring-influxdb
  selfLink: /api/v1/namespaces/default/services/monitoring-influxdb
spec:
  ports:
  - name: api
    port: 8080
    protocol: TCP
    targetPort: 8086
  - name: admin-ui
    port: 8081
    protocol: TCP
    targetPort: 8083
  selector:
    name: influxdb
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
